--- a/jokedisplay/src/main/res/layout/joke_display_activity.xml
+++ b/jokedisplay/src/main/res/layout/joke_display_activity.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/joke_display_joke_tv"
+        android:id="@+id/joke_activity_joke_tv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Joke Activity. Joke goes here" />
 
 </LinearLayout>
