--- a/jokedisplay/src/main/res/layout/joke_display_activity.xml
+++ b/jokedisplay/src/main/res/layout/joke_display_activity.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    >
 
     <TextView
         android:id="@+id/joke_activity_joke_tv"
+        style="@style/JokeActivityStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Joke Activity. Joke goes here" />
 
-</LinearLayout>
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.10"
+        android:text="Joke Activity. Joke goes here"
+        />
+
+</RelativeLayout>
