--- a/app/src/free/res/layout/fragment_main.xml
+++ b/app/src/free/res/layout/fragment_main.xml
@@ -35,4 +35,13 @@
 
     </com.google.android.gms.ads.AdView>
 
+<!--    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView_inter"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        ads:adSize=""
+        ads:adUnitId="@string/banner_ad_unit_id">
+
+    </com.google.android.gms.ads.AdView>-->
+
 </RelativeLayout>
