--- a/app/src/free/res/layout/fragment_main.xml
+++ b/app/src/free/res/layout/fragment_main.xml
@@ -16,6 +16,7 @@
         android:text="@string/instructions" />
 
     <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/instructions_text_view"
@@ -35,13 +36,5 @@
 
     </com.google.android.gms.ads.AdView>
 
-<!--    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView_inter"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        ads:adSize=""
-        ads:adUnitId="@string/banner_ad_unit_id">
-
-    </com.google.android.gms.ads.AdView>-->
 
 </RelativeLayout>
